--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "biopet-common-utils"]
 	path = biopet-common-utils
 	url = https://github.com/biopet/biopet-common-utils.git
+[submodule "biopet-tool-utils"]
+	path = biopet-tool-utils
+	url = https://github.com/biopet/biopet-tool-utils.git
