--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "biopet-tool-utils"]
 	path = biopet-tool-utils
 	url = https://github.com/biopet/biopet-tool-utils.git
+[submodule "biopet-ngs-utils"]
+	path = biopet-ngs-utils
+	url = https://github.com/biopet/biopet-ngs-utils.git
