--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "biopet-ngs-utils"]
 	path = biopet-ngs-utils
 	url = https://github.com/biopet/biopet-ngs-utils.git
+[submodule "biopet-config-utils"]
+	path = biopet-config-utils
+	url = https://github.com/biopet/biopet-config-utils.git
